test/spec_vectors/global/fail/module_16.wat
(module (global (import "test" "global-i32") i32) (global i32 (i32.const 0) (global.get 0)))